# rm_detector

./: CMakeLists.txt  nano100.onnx  saver.txt
cfg/: dynamic.cfg
config/: camera.yaml
include/rm_detector/: detector.h  detector2.h  logging.h
launch/: armor_detector.launch  detector_test.launch
rm_detecter/: CMakeLists.txt  package.xml
rm_detecter/cfg/: dynamic.cfg
rm_detecter/include/rm_detecter/: detecter.h
rm_detecter/src/: detecter.cpp  detecter_node.cpp
rm_detector/: CMakeLists.txt  data_file.txt  package.xml
rm_detector/cfg/: dynamic.cfg
rm_detector/include/rm_detector/: detector.h
rm_detector/src/: detector.cpp  detector_node.cpp
src/: detector.cpp  detector_node.cpp  exec.cpp  test.cpp
